# Image_compression

./: .gitignore  CMakeLists.txt  README.md
include/: CApp.h  CCustomDecoder.h  CCustomEncoder.h  CHuffmanCanon.h  CImage.h  filters.h  utils.h
src/: CApp.cpp  CCustomDecoder.cpp  CCustomEncoder.cpp  CHuffmanCanon.cpp  CImage.cpp  CMakeLists.txt  filters.cpp  main.cpp  utils.cpp
